--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -14,7 +14,7 @@
   --color-grey-med: #6e7b8e;
   --color-grey-dark: #1f3a42;
   --color-blue-light: #8acfd6;
-  --color-blue-medium: #71a7bd;
+  --color-blue-med: #71a7bd;
   --color-blue-dark: #48708d;
   --color-gold: #ffc107;
   --color-orange: #f7882f;
@@ -29,10 +29,9 @@
   --color-callout-cyan: #80ffea;
   --color-callout-cyan-secondary: #407f75;
 
-  --font-display: AlteHaas, Helvetica, Arial, sans-serif;
-  --font-base: Authentic, Helvetica, Arial, sans-serif;
-  --font-base-bold: AuthenticBold, Helvetica, Arial, sans-serif;
-  --font-mono: Fira, monospace;
+  --font-display: Quicksand, system-ui;
+  --font-base: Tahoma, system-ui;
+  --font-mono: Fira, monospace, system-ui;
 
   // https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75%7C0.5%7C0.25,1.5%7C2%7C3%7C4%7C6,s-l%7Cl-2xl&g=s,l,xl,12
 
