--- a/src/includes/partials/footer.html
+++ b/src/includes/partials/footer.html
@@ -23,5 +23,5 @@
       </li>
     </ul>
   </div>
-  <div class="region">&copy; {{ '' | getFullYear }}</div>
+  <div class="wrapper | region | prose"><p>&copy; {{ '' | getFullYear }}</p></div>
 </footer>
