--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -13,16 +13,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | url }}" />
     <link
       rel="preload"
-      href="{{ '/assets/fonts/AUTHENTICSans-90.woff' | url }}"
+      href="{{ '/assets/fonts/Quicksand-VariableFont_wght.ttf' | url }}"
       as="font"
-      type="font/woff"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="{{ '/assets/fonts/AUTHENTICSans-130.woff' | url }}"
-      as="font"
-      type="font/woff"
+      type="font/ttf"
       crossorigin
     />
     <link rel="preload" href="{{ '/assets/fonts/FiraMono-medium.ttf' | url }}" as="font" type="font/ttf" crossorigin />
