--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: Authentic;
-  font-weight: normal;
+  font-family: Quicksand;
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
-  src: url("/assets/fonts/AUTHENTICSans-90.woff");
+  src: url("/assets/fonts/Quicksand-VariableFont_wght.ttf");
 }
 
 @font-face {
-  font-family: AuthenticBold;
-  font-weight: bold;
+  font-family: system-ui;
   font-style: normal;
-  font-display: swap;
-  src: url("/assets/fonts/AUTHENTICSans-130.woff");
+  font-weight: 300;
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"),
+    local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
 }
 
 @font-face {
