--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -44,10 +44,6 @@ h6 {
   scroll-margin-block-start: var(--offset);
 }
 
-strong {
-  font-family: AuthenticBold;
-}
-
 a {
   color: currentColor;
   text-decoration: underline 0.1rem;
@@ -94,10 +90,8 @@ footer {
   --region-space-top: var(--space-xl);
   --region-space-bottom: var(--space-xl);
   padding-inline: var(--gutter);
-  background-color: var(--color-grey-light);
-  div:last-of-type {
-    text-align: center;
-  }
+  color: var(--color-light);
+  background-color: var(--color-grey-dark);
 }
 
 // Mark accessibility
