--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -40,7 +40,7 @@
         display: block;
         border-inline-start: solid var(--border-thin);
         color: var(--color-dark);
-        background-color: var(--color-gold);
+        background-color: var(--color-callout-yellow);
         text-decoration: none;
       }
     }
