--- a/src/includes/partials/help.html
+++ b/src/includes/partials/help.html
@@ -1,3 +1,5 @@
 <hr />
+{% unless page.url == '/contact/' %}
 <p>Can't find what you need? <a href="/">Contact us</a> for additional help.</p>
+{% endunless %}
 <p><a href="#top">Back to the top</a>.</p>
