--- a/src/assets/sass/blocks/_navbar.scss
+++ b/src/assets/sass/blocks/_navbar.scss
@@ -35,7 +35,7 @@
   ul {
     display: flex;
     gap: var(--space-s);
-    box-shadow: var(--nav-list-shadow, -5px 0 11px 0 rgb(0 0 0 / 0.2));
+    box-shadow: var(--nav-list-shadow, 0px 10px 19px -7px rgba(0, 0, 0, 0.75));
     flex-direction: var(--nav-list-layout, column);
     flex-wrap: wrap;
     height: var(--nav-list-height);
