--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -35,12 +35,21 @@
         a {
           padding-inline-start: var(--space-m);
         }
+        a:is(:hover, :focus) {
+          display: block;
+          padding-inline-start: calc(var(--space-m) - var(--border-thin));
+          border-inline-start: solid var(--border-thin);
+          color: var(--color-dark);
+          background-color: var(--color-grey-light);
+          text-decoration: none;
+        }
       }
       [aria-current="page"] {
         display: block;
+        padding-inline-start: calc(var(--space-m) - var(--border-thin));
         border-inline-start: solid var(--border-thin);
         color: var(--color-dark);
-        background-color: var(--color-callout-yellow);
+        background-color: var(--color-grey-light);
         text-decoration: none;
       }
     }
