hover state tweeks

--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -40,7 +40,7 @@
           padding-inline-start: calc(var(--space-m) - var(--border-thin));
           border-inline-start: solid var(--border-thin);
           color: var(--color-dark);
-          background-color: var(--color-grey-light);
+          background-color: var(--color-grey-light-hover);
           text-decoration: none;
         }
         input {
