--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -11,6 +11,7 @@
   --color-light: #f9f8f5;
 
   --color-grey-light: #dfdce3;
+  --color-grey-light-hover: #dfdce377;
   --color-grey-med: #6e7b8e;
   --color-grey-dark: #1f3a42;
   --color-blue-light: #8acfd6;
