--- a/src/assets/sass/blocks/_content.scss
+++ b/src/assets/sass/blocks/_content.scss
@@ -1,5 +1,5 @@
 .content {
-  // Maintain focus at top of page when tabbing to conten. but provide visual cue that focus is on on content
+  // Provide a visual cue that focus is on main content
   scroll-margin-block-start: calc(var(--offset) - var(--space-l));
   @media (min-width: 60rem) {
     margin-inline-start: 18rem;
