--- a/src/includes/partials/footer.html
+++ b/src/includes/partials/footer.html
@@ -1,7 +1,7 @@
 {% assign currentPage = page.url %}
 
 <footer class="region">
-  <div class="wrapper | prose | grid | docs-box">
+  <nav class="wrapper | prose | grid | docs-box">
     <ul role="list">
       <li>
         <h2>Docs</h2>
@@ -22,6 +22,6 @@
         </ul>
       </li>
     </ul>
-  </div>
+  </nav>
   <div class="wrapper | region | prose"><p>&copy; {{ '' | getFullYear }}</p></div>
 </footer>
