--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -1,9 +1,17 @@
+{% assign currentPage = page.url %}
 <a href="#content" class="skip-link">Skip to content</a>
 <a href="#sidebar" class="skip-link">Skip to docs menu</a>
 
 <header class="region | site-header | ontop">
   <div class="logo"><a href="/" tabindex="-1">{{ metadata.title }}</a></div>
-  <nav id="mainnav" class="navbar | docs-list" aria-label="primary">{% include 'partials/navlist.html' %}</nav>
+  <nav id="mainnav" class="navbar | docs-list" aria-label="primary">
+    <ul role="list">
+      {% include 'partials/docslist.html' %} {% for page in navigation.pages %}
+      <li><a href="{{ page.url }}" {% if currentPage == page.url %}aria-current="page"{% endif %}>{{ page.title }}</a></li>
+      {% endfor %}
+      <li>{% search %}</li>
+    </ul>
+  </nav>
   <template id="burger-template">
     <button
       class="mobile-button"
