--- a/src/assets/sass/blocks/_docs-list.scss
+++ b/src/assets/sass/blocks/_docs-list.scss
@@ -10,7 +10,7 @@
     summary::before {
       display: inline-block;
       width: 1.65em;
-      height: 1em;
+      height: 0.85em;
       background-image: url("/assets/images/plus.svg");
       background-repeat: no-repeat;
       background-position: center;
@@ -28,22 +28,21 @@
         // compensate for all nav li padding
         padding-inline-start: 0;
         a {
-          padding-inline-start: var(--space-m);
+          padding-inline-start: calc(var(--space-m) + 0.2em);
         }
         a:is(:hover, :focus) {
           display: block;
-          padding-inline-start: calc(var(--space-m) - var(--border-thin));
+          padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
           border-inline-start: solid var(--border-thin);
           color: var(--color-dark);
-          background-color: var(--color-grey-light-hover);
+          background-color: var(--color-grey-light);
           text-decoration: none;
         }
       }
       [aria-current="page"] {
         display: block;
-        padding-inline-start: calc(var(--space-m) - var(--border-thin));
+        padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
         border-inline-start: solid var(--border-thin);
-        border-collapse: collapse;
         color: var(--color-dark);
         background-color: var(--color-grey-light);
         text-decoration: none;
