--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -39,8 +39,9 @@
           display: block;
           padding-inline-start: calc(var(--space-m) - var(--border-thin));
           border-inline-start: solid var(--border-thin);
+          border-inline-start: solid var(--border-thin);
           color: var(--color-dark);
-          background-color: var(--color-grey-light-hover);
+          background-color: var(--color-grey-light);
           text-decoration: none;
         }
         input {
@@ -51,6 +52,7 @@
       [aria-current="page"] {
         display: block;
         padding-inline-start: calc(var(--space-m) - var(--border-thin));
+        border-inline-start: solid var(--border-thin);
         border-inline-start: solid var(--border-thin);
         color: var(--color-dark);
         background-color: var(--color-grey-light);
