--- a/src/assets/sass/blocks/_docs-list.scss
+++ b/src/assets/sass/blocks/_docs-list.scss
@@ -54,7 +54,7 @@
       background-image: url("/assets/images/minus.svg");
     }
   }
-  > li {
-    padding-inline-start: var(--space-m);
-  }
+  // > li {
+  //   padding-inline-start: var(--space-m);
+  // }
 }
