--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -3,7 +3,7 @@
 <a href="#sidebar" class="skip-link">Skip to docs menu</a>
 
 <header class="region | site-header | ontop">
-  <div class="logo"><a href="/" tabindex="-1">{{ metadata.title }}</a></div>
+  <a href="/" tabindex="-1">{{ metadata.title }}</a>
   <nav id="mainnav" class="navbar | docs-list" aria-label="primary">
     <ul role="list">
       {% include 'partials/docslist.html' %} {% for page in navigation.pages %}
