--- a/src/assets/sass/blocks/_navbar.scss
+++ b/src/assets/sass/blocks/_navbar.scss
@@ -31,7 +31,7 @@
   }
   ul {
     display: flex;
-    gap: var(--space-s);
+    gap: var(--space-xs-s);
     box-shadow: var(--nav-list-shadow, 0px 10px 19px -7px rgba(0, 0, 0, 0.75));
     flex-direction: var(--nav-list-layout, column);
     // flex-wrap: wrap;
