--- a/src/assets/sass/blocks/_navbar.scss
+++ b/src/assets/sass/blocks/_navbar.scss
@@ -15,6 +15,8 @@
       --nav-list-layout: row;
       --nav-list-position: static;
       --nav-list-padding: 0;
+      --nav-list-border-block-start: none;
+      --nav-list-border-block-end: none;
       --nav-list-height: auto;
       --nav-list-width: 100%;
       --nav-list-shadow: none;
@@ -32,15 +34,17 @@
   ul {
     display: flex;
     gap: var(--space-xs-s);
-    box-shadow: var(--nav-list-shadow, 0px 10px 19px -7px rgba(0, 0, 0, 0.75));
+    box-shadow: var(--nav-list-shadow, -1px 49px 78px -38px rgba(0, 0, 0, 0.75));
     flex-direction: var(--nav-list-layout, column);
     // flex-wrap: wrap;
-    height: var(--nav-list-height);
-    max-height: 75vh;
     padding: var(--nav-list-padding, var(--space-m));
+    // border-block-start: var(--nav-list-border-block-start, solid var(--color-grey-light) var(--border-thin));
+    // border-block-start: var(--nav-list-border-block-end, solid var(--color-grey-light) var(--border-thin));
     position: var(--nav-list-position, fixed);
     inset-block-start: var(--offset); // Logical property. Equivalent to top: 0;
     inset-inline: 0; // Logical property. Equivalent to right: 0;
+    height: var(--nav-list-height, calc(100vh - var(--offset)));
+    // max-height: calc(100vh - var(--offset));
     width: var(--nav-list-width);
     visibility: var(--nav-list-visibility, visible);
     overflow-y: auto;
