--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -12,7 +12,7 @@
   --region-space-top: var(--space-s);
   --region-space-bottom: var(--space-s);
   padding-inline: var(--gutter);
-  border-block-end: solid var(--color-grey-light) var(--border-thin);
+  // border-block-end: solid var(--color-grey-light) var(--border-thin);
   background-color: var(--color-light);
   a {
     text-decoration: none;
@@ -29,7 +29,7 @@
   }
   @media (max-width: 60rem) {
     ul {
-      padding-block: var(--space-3xs-2xs);
+      // padding-block: var(--space-3xs-2xs);
       li {
         // compensate for all nav li padding
         padding-inline-start: 0;
@@ -39,7 +39,6 @@
         a:is(:hover, :focus) {
           display: block;
           padding-inline-start: calc(var(--space-m) - var(--border-thin));
-          border-inline-start: solid var(--border-thin);
           border-inline-start: solid var(--border-thin);
           color: var(--color-dark);
           background-color: var(--color-grey-light);
@@ -53,7 +52,6 @@
       [aria-current="page"] {
         display: block;
         padding-inline-start: calc(var(--space-m) - var(--border-thin));
-        border-inline-start: solid var(--border-thin);
         border-inline-start: solid var(--border-thin);
         color: var(--color-dark);
         background-color: var(--color-grey-light);
