--- a/src/assets/sass/blocks/_docs-list.scss
+++ b/src/assets/sass/blocks/_docs-list.scss
@@ -30,12 +30,19 @@
         a {
           padding-inline-start: calc(var(--space-m) + 0.2em);
         }
-        a:is(:hover, :focus) {
+        a:is(:hover) {
           display: block;
           padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
           border-inline-start: solid var(--border-thin);
           color: var(--color-dark);
           background-color: var(--color-grey-light);
+          text-decoration: none;
+        }
+        a:is(:focus) {
+          display: block;
+          padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
+          border-inline-start: solid var(--border-thin) var(--color-light);
+          color: var(--color-dark);
           text-decoration: none;
         }
       }
