--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -20,11 +20,11 @@
   @media (min-width: 60rem) {
     a:is(:hover, :focus) {
       text-underline-offset: 0.5rem;
-      text-decoration: underline 0.25rem;
+      text-decoration: underline var(--border-thin);
     }
     [aria-current="page"] {
       text-underline-offset: 0.5rem;
-      text-decoration: underline 0.25rem;
+      text-decoration: underline var(--border-thin);
     }
   }
   @media (max-width: 60rem) {
@@ -34,14 +34,21 @@
         // compensate for all nav li padding
         padding-inline-start: 0;
         a {
-          padding-inline-start: var(--space-m);
+          padding-inline-start: calc(var(--space-m) + 0.2em);
         }
-        a:is(:hover, :focus) {
+        a:is(:hover) {
           display: block;
-          padding-inline-start: calc(var(--space-m) - var(--border-thin));
+          padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
           border-inline-start: solid var(--border-thin);
           color: var(--color-dark);
           background-color: var(--color-grey-light);
+          text-decoration: none;
+        }
+        a:is(:focus) {
+          display: block;
+          padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
+          border-inline-start: solid var(--border-thin) var(--color-light);
+          color: var(--color-dark);
           text-decoration: none;
         }
         input {
@@ -51,7 +58,7 @@
       }
       [aria-current="page"] {
         display: block;
-        padding-inline-start: calc(var(--space-m) - var(--border-thin));
+        padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
         border-inline-start: solid var(--border-thin);
         color: var(--color-dark);
         background-color: var(--color-grey-light);
