--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -2,7 +2,7 @@
 <a href="#content" class="skip-link">Skip to content</a>
 <a href="#sidebar" class="skip-link">Skip to docs menu</a>
 
-<header class="region | site-header | ontop">
+<header class="region | site-header">
   <a href="/" tabindex="-1">{{ metadata.title }}</a>
   <nav id="mainnav" class="navbar | docs-list" aria-label="primary">
     <ul role="list">
