--- a/src/assets/sass/blocks/_docs-list.scss
+++ b/src/assets/sass/blocks/_docs-list.scss
@@ -26,24 +26,13 @@
       padding-block: var(--space-3xs-2xs);
       li {
         // compensate for all nav li padding
+        --flow-space: var(--space-3xs);
         padding-inline-start: 0;
         a {
           padding-inline-start: calc(var(--space-m) + 0.2em);
         }
-        a:is(:hover) {
+        a:is(:hover, :focus) {
           display: block;
-          padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
-          border-inline-start: solid var(--border-thin);
-          color: var(--color-dark);
-          background-color: var(--color-grey-light);
-          text-decoration: none;
-        }
-        a:is(:focus) {
-          display: block;
-          padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
-          border-inline-start: solid var(--border-thin) var(--color-light);
-          color: var(--color-dark);
-          text-decoration: none;
         }
       }
       [aria-current="page"] {
