--- a/src/assets/sass/blocks/_navbar.scss
+++ b/src/assets/sass/blocks/_navbar.scss
@@ -1,9 +1,3 @@
-// Set on parent to place it beneath the mobile menu when expanded
-.ontop {
-  z-index: 1;
-  position: relative;
-}
-
 .navbar {
   // Set variables/desktop state
   @media (min-width: 60rem) {
@@ -28,7 +22,9 @@
   details {
     display: var(--details-list-display, flex);
     ul {
+      // Prevent details from open in new window within mobile nav
       all: unset;
+      padding-block: var(--space-3xs-2xs);
     }
   }
   ul {
