--- a/src/assets/sass/blocks/_sidebar.scss
+++ b/src/assets/sass/blocks/_sidebar.scss
@@ -9,7 +9,5 @@
   bottom: 0;
   width: 18rem;
   padding-inline: var(--gutter);
-  // border-inline-end: solid var(--color-grey-light) var(--border-thin);
-  background-color: var(--color-light);
-  overflow: auto;
+  overflow-y: auto;
 }
