--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -12,7 +12,6 @@
   --region-space-top: var(--space-s);
   --region-space-bottom: var(--space-s);
   padding-inline: var(--gutter);
-  // border-block-end: solid var(--color-grey-light) var(--border-thin);
   background-color: var(--color-light);
   a {
     text-decoration: none;
@@ -29,27 +28,16 @@
   }
   @media (max-width: 60rem) {
     ul {
-      // padding-block: var(--space-3xs-2xs);
       li {
         // compensate for all nav li padding
         padding-inline-start: 0;
         a {
           padding-inline-start: calc(var(--space-m) + 0.2em);
         }
-        a:is(:hover) {
+        a:is(:hover, :focus) {
           display: block;
-          padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
-          border-inline-start: solid var(--border-thin);
-          color: var(--color-dark);
-          background-color: var(--color-grey-light);
-          text-decoration: none;
-        }
-        a:is(:focus) {
-          display: block;
-          padding-inline-start: calc(var(--space-m) - var(--border-thin) + 0.2em);
-          border-inline-start: solid var(--border-thin) var(--color-light);
-          color: var(--color-dark);
-          text-decoration: none;
+          text-underline-offset: 0.5rem;
+          text-decoration: underline var(--border-thin);
         }
         input {
           margin-inline-start: var(--space-m);
