--- a/src/includes/partials/sidebar.html
+++ b/src/includes/partials/sidebar.html
@@ -1,1 +1,1 @@
-<aside id="sidebar" class="region | sidebar | docs-list">{% include 'partials/docslist.html' %}</aside>
+<aside id="sidebar" class="region | flow | sidebar | docs-list">{% include 'partials/docslist.html' %}</aside>
