--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -23,8 +23,8 @@
     <script type="module" src="{{ '/assets/scripts/app.js' | url }}" defer></script>
   </head>
   <body id="top">
-    {% include 'partials/header.html' %}
+    {% include 'partials/site-header.html' %}
     <main>{{ content }}</main>
-    {% include 'partials/footer.html' %}
+    {% include 'partials/site-footer.html' %}
   </body>
 </html>
