--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -4,7 +4,7 @@ layout: base.html
 
 {% include 'partials/sidebar.html' %}
 <article id="content" class="region | content">
-  <header class="wrapper | flow | page-header"><h1>{{ title }}</h1></header>
+  {% include 'partials/page-header.html' %}
   <article class="wrapper | flow | prose">
     {{ content }}
     <div class="grid | docs-box">
