--- a/src/layouts/page.html
+++ b/src/layouts/page.html
@@ -4,17 +4,7 @@ layout: base.html
 
 {% include 'partials/sidebar.html' %}
 <article id="content" class="region | content">
-  <header class="wrapper | flow | page-header">
-    {% if breadcrumbs %}
-    <ul class="breadcrumb" role="list">
-      {% for item in breadcrumbs %}
-      <li>{% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %} {{item.title }}{% endif %}</li>
-      {% endfor %}
-      <li><a href="{{ page.url }}" aria-current="page">{{ title }}</a></li>
-    </ul>
-    {% endif %}
-    <h1>{{ title }}</h1>
-  </header>
+  {% include 'partials/page-header.html' %}
   <article class="wrapper | flow | prose">
     {% if overview %}
     <p>{{ overview }}</p>
