--- a/src/includes/partials/site-footer.html
+++ b/src/includes/partials/site-footer.html
@@ -17,7 +17,13 @@
         <h2>Resources</h2>
         <ul class="flow | nav-list" role="list">
           {% for page in navigation.pages %}
-          <li><a href="{{ page.url }}" {% if currentPage == page.url %}aria-current="page"{% endif %}>{{ page.title }}</a></li>
+          <li>
+            {% if currentPage == page.url %}
+            <a href="{{ page.url }}" aria-current="page">{{ page.title }}</a>
+            {% else %}
+            <a href="{{ page.url }}">{{ page.title }}</a>
+            {% endif %}
+          </li>
           {% endfor %}
         </ul>
       </li>
