--- a/src/assets/sass/blocks/_sidebar.scss
+++ b/src/assets/sass/blocks/_sidebar.scss
@@ -6,6 +6,7 @@
   top: var(--offset);
   left: 0;
   bottom: 0;
+  z-index: 2;
   height: calc(100vh - var(--offset));
   width: 18rem;
   padding-inline: var(--gutter);
