--- a/src/includes/partials/site-footer.html
+++ b/src/includes/partials/site-footer.html
@@ -1,7 +1,7 @@
 {% assign currentPage = page.url %}
 
-<footer class="region">
-  <nav class="wrapper | grid | docs-box">
+<footer class="region | content">
+  <nav class="wrapper | region | grid | docs-box">
     <ul role="list">
       <li>
         <h2>Docs</h2>
