--- a/src/assets/sass/blocks/_table-of-contents.scss
+++ b/src/assets/sass/blocks/_table-of-contents.scss
@@ -1,15 +1,23 @@
 .table-of-contents {
+  @media (max-width: 80rem) {
+    h2 {
+      margin-block-end: var(--space-s-m);
+    }
+  }
   @media (min-width: 80rem) {
     position: fixed;
     right: 0;
     top: var(--offset);
     bottom: 0;
+    z-index: 2;
+    height: calc(100vh - var(--offset));
     width: 18rem;
     // Compensate for no region spacing on this element
     --flow-space: var(--space-l);
     padding-inline: var(--gutter);
     background-color: var(--color-light);
     font-size: var(--step--1);
+    overflow-y: auto;
     h2 {
       display: inline-block;
       font-size: var(--step-0);
