lots of commits but just moving things around

--- a/src/assets/sass/blocks/prose.scss
+++ b/src/assets/sass/blocks/prose.scss
@@ -7,6 +7,7 @@
   }
 }
 
+// make the flow space under headings and between multiple paragraphs
 .prose :is(h2, h3, h4) + *,
 p + p {
   --flow-space: var(--space-s-m);
