--- a/src/assets/sass/blocks/docs-box.scss
+++ b/src/assets/sass/blocks/docs-box.scss
@@ -7,6 +7,7 @@
     ul {
       padding-inline: 0;
       padding-block: var(--space-3xs-2xs);
+      --flow-space: var(--space-3xs-2xs);
     }
   }
 }
