--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -12,7 +12,7 @@ layout: base.html
       <ul role="list">
         <li>
           <h2>{{ section.title }}</h2>
-          <ul role="list">
+          <ul class="flow | nav-list" role="list">
             <li><a href="{{ section.url }}">{{ section.title }}</a></li>
             {% for article in section.articles %}
             <li><a href="{{ article.url }}">{{ article.title }}</a></li>
