--- a/src/assets/sass/global.scss
+++ b/src/assets/sass/global.scss
@@ -120,18 +120,14 @@ table {
   border-collapse: collapse;
   td,
   th {
+    padding-block: var(--space-3xs-2xs);
     padding-inline: var(--space-2xs-xs);
     border: var(--border-thin) solid var(--color-dark);
   }
 
   th {
-    padding-block: var(--space-2xs-xs);
-    background-color: var(--color-grey-light);
+    background-color: var(--color-blue-light);
     text-align: left;
-  }
-
-  td {
-    padding-block: var(--space-3xs-2xs);
   }
 
   tr:nth-child(even) {
@@ -141,4 +137,8 @@ table {
   tr:hover {
     background-color: var(--color-callout-yellow);
   }
+}
+
+button {
+  cursor: pointer;
 }
