--- a/src/assets/sass/settings.scss
+++ b/src/assets/sass/settings.scss
@@ -8,6 +8,7 @@
   --border-thin: 0.1rem;
 
   --color-dark: #000;
+  // --color-dark-mode: #1c1f24;
   --color-light: #f9f8f5;
 
   --color-grey-light: #dfdce3;
