--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -20,6 +20,9 @@
     />
     <link rel="preload" href="{{ '/assets/fonts/FiraMono-medium.ttf' | url }}" as="font" type="font/ttf" crossorigin />
     <link rel="preload" href="{{ '/assets/fonts/FiraMono-regular.ttf' | url }}" as="font" type="font/ttf" crossorigin />
+    <script>
+      // Firefox fouc bug fix
+    </script>
     <script type="module" src="{{ '/assets/scripts/app.js' | url }}" defer></script>
   </head>
   <body id="top">
