ff bug fix comment

--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -21,7 +21,7 @@
     <link rel="preload" href="{{ '/assets/fonts/FiraMono-medium.ttf' | url }}" as="font" type="font/ttf" crossorigin />
     <link rel="preload" href="{{ '/assets/fonts/FiraMono-regular.ttf' | url }}" as="font" type="font/ttf" crossorigin />
     <script>
-      // Firefox fouc bug fix
+      // Firefox fouc bug fix, do not remove this empty script. See bug here: https://bugzilla.mozilla.org/show_bug.cgi?id=1404468
     </script>
     <script type="module" src="{{ '/assets/scripts/app.js' | url }}" defer></script>
   </head>
